Added refresh and logout methods , upgraded other mathods

--- a/.env
+++ b/.env
@@ -8,5 +8,8 @@ JWT_SECRET="123456"
 JWT_ACCESS_TOKEN_TTL="2h"
 JWT_REFRESH_TOKEN_TTL="7d"
 
+COOKIE_DOMAIN='localhost'
+NODE_ENV='developmnet'
+
 
 POSTGRES_URI=postgresql://nestjs:mern@localhost:5432/nest?schema=public
